Fixed button spacing and text color

--- a/src/index.scss
+++ b/src/index.scss
@@ -1,4 +1,13 @@
 $primary: MediumPurple;
 $body-bg: White;
 
+.logout-button {
+  margin-top: 10px;
+  margin-bottom: 10px;
+}
+
+.back-button {
+  margin-top: 10px;
+}
+
 @import "~bootstrap/scss/bootstrap";
